EFK/ log-pilot + elasticsearch + kibana/traefik-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-system
spec:
  rules:
  - host: kibana.baishuchao.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
